--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <div class="header">
+      <h1 class="title">Wordle But Bettter</h1>
+    </div>
     <div class="alert-container" data-alert-container></div>
     <div data-guess-grid class="guess-grid">
       <div class="tile"></div>
