Added header logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wordle But Bettter</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
+    <link rel="icon" href="logo.png" />
   </head>
   <body>
     <div class="header">
